...
            appLogo.centerXAnchor.constraint(equalTo: view.centerXAnchor),
            appLogo.centerYAnchor.constraint(equalTo: view.centerYAnchor),
            appLogo.widthAnchor.constraint(equalToConstant: AppSizes.splashScreenImageSize),
            appLogo.heightAnchor.constraint(equalToConstant: AppSizes.splashScreenImageSize)
        ])
        
        view.accessibilityIdentifier = "splash-view"
        appLogo.accessibilityIdentifier = "splash-logo"
    }
    
    private func subscribeToPublishers() {
        viewModel.$dismissSplash
            .sink { [weak self] shouldDismiss in
                if shouldDismiss {
...
